changed the margin top for a few elements to fix spacing

--- a/src/components/style.module.css
+++ b/src/components/style.module.css
@@ -100,7 +100,7 @@ body {
 
 /* The Gear Shop section --------------------------------------------------------------------------------------------------------*/
 .gearShop{
-    margin-top: 15%;
+    margin-top: 10%;
 }
 .gearShop h1{
     margin-left: 3%;
@@ -152,6 +152,7 @@ body {
     background-color: #b75934;
     color: #fff;
     font-size: small;
+    margin-top: 10%;
 }
 
 /* Media query -----------------------------------------------------------------------------------------------------------------*/
